Update src/test/java/com/exasol/adapter/dialects/postgresql/PostgreSQLScalarFunctionsIT.java
Co-authored-by: jakobbraun <jakob.braun@posteo.de>